--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
 
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
 }
